# Game_Engine_Jonel_Muncan

./: .gitignore  CMakeLists.txt  Game_JM.sln  README.md  Unique.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Game_JM/: CMakeLists.txt  Game_JM.vcxproj  Game_JM.vcxproj.filters  main.cpp
Wankel/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  Keys.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  Utilities.h  Wankel.vcxproj  Wankel.vcxproj.filters  WankelApp.cpp  WankelApp.h  WindowImplementation.h  pch.h  placeholder.cpp
Wankel/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Wankel/include/: Wankel.h
Wankel/includes/: Wankel.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
